Final thesis point for nr 3

--- a/thesis_point_definitions.tex
+++ b/thesis_point_definitions.tex
@@ -1,6 +1,6 @@
 \newcommand{\thesispointone}{A methodology and case study for code synthesis evaluation of LLMs}
 \newcommand{\thesispointtwo}{A program synthesis dataset for LLM temperature analysis}
-\newcommand{\thesispointthree}{GPT-4 assessment in real-world software vulnerabilities fixing}
+\newcommand{\thesispointthree}{Assessing GPT-4 in Fixing Real-World Software Vulnerabilities}
 
 \newcommand{\thesispointonehu}{Módszertan és esettanulmány a nagy nyelvi modellek kódszintézis-értékeléséhez}
 \newcommand{\thesispointtwohu}{Programszintézis adathalmaz a nagy nyelvi modellek temperature elemzéséhez}
