Smaller fixes - formatting - name fixing - thesispoint formatting

--- a/thesis_point_definitions.tex
+++ b/thesis_point_definitions.tex
@@ -1,7 +1,11 @@
-\newcommand{\thesispointone}{A methodology and case study for code synthesis evaluation of LLMs}
-\newcommand{\thesispointtwo}{A program synthesis dataset for LLM temperature analysis}
-\newcommand{\thesispointthree}{Assessing GPT-4 in Fixing Real-World Software Vulnerabilities}
+\newcommand{\thesispointone}{A methodology and case study for code synthesis \\ \mbox{evaluation} of LLMs}
+\newcommand{\thesispointtwo}{A program synthesis dataset for LLM temperature \\ \mbox{analysis}}
+\newcommand{\thesispointthree}{Assessing GPT-4 in Fixing Real-World Software \\ \mbox{Vulnerabilities}}
+
+\newcommand{\thesispointoneuf}{A methodology and case study for code synthesis evaluation of LLMs}
+\newcommand{\thesispointtwouf}{A program synthesis dataset for LLM temperature analysis}
+\newcommand{\thesispointthreeuf}{Assessing GPT-4 in Fixing Real-World Software Vulnerabilities}
 
 \newcommand{\thesispointonehu}{Módszertan és esettanulmány a nagy nyelvi modellek kódszintézis-értékeléséhez}
 \newcommand{\thesispointtwohu}{Programszintézis adathalmaz a nagy nyelvi modellek temperature elemzéséhez}
-\newcommand{\thesispointthreehu}{A GPT-4 értékelése valós szoftversérülékenységek javításában}
+\newcommand{\thesispointthreehu}{A GPT-4 értékelése valós szoftversérülékenységek \\ javításában}
